--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-size: 12px;
 }
 
-@page{
+@page {
 
     @bottom-left {
         content: element(footer);
@@ -17,10 +17,10 @@ body {
         padding-bottom: 10px;
     }
 
-    margin-top:3.3cm;
-    margin-left:2cm;
-    margin-right:2cm;
-    margin-bottom:3.3cm;
+    margin-top: 3.3cm;
+    margin-left: 2cm;
+    margin-right: 2cm;
+    margin-bottom: 3.3cm;
 
     size: A4 portrait;
 }
@@ -30,8 +30,8 @@ div.header {
 }
 
 div.footer {
-    margin-top: 0.5cm;
     display: block;
+    margin-top: 0.5cm;
     position: running(footer);
 }
 
@@ -53,14 +53,12 @@ div.footer {
 
 .logo {
     width: 275px;
-
 }
 
 h1 {
-
-    margin-top: 40px;
     font-size: 18px;
     margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 p {
@@ -77,8 +75,8 @@ p {
 }
 
 .barcode {
-    font-size: 26px;
     font-family: "Bar-Code 39";
+    font-size: 26px;
 }
 
 .right {
@@ -102,13 +100,15 @@ table {
 }
 
 hr {
-    border:dashed #000000 0.5px;
-    background-color:#000000;
-    height:1px;
+    background-color: #000000;
+    border: dashed #000000 0.5px;
+    height: 1px;
 }
 
 .page-break {
     page-break-after: always;
 }
 
-.next-page{page-break-before:always}
+.next-page {
+    page-break-before: always
+}
