Moved resources to '/src/test/resources'

--- a/src/test/resources/style.css
+++ b/src/test/resources/style.css
@@ -71,7 +71,7 @@ p {
 
 @font-face {
     font-family: "Bar-Code 39";
-    src: url(Code39.ttf) format('truetype');
+    src: url(../../../Code39.ttf) format('truetype');
 }
 
 .barcode {
